Update JavaRegexCaseInsensitive.java