@@ -1,6 +1,5 @@
 package com.zetcode;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -9,12 +8,12 @@ public class JavaRegexCaseInsensitive {
 
     public static void main(String[] args) {
 
-        List<String> users = Arrays.asList("dog", "Dog", "DOG", "Doggy");
+        List<String> users = List.of("dog", "Dog", "DOG", "Doggy");
 
         Pattern p = Pattern.compile("dog", Pattern.CASE_INSENSITIVE);
 
         users.forEach((user) -> {
-            
+
             Matcher m = p.matcher(user);
 
             if (m.matches()) {
